# saved-games

./: .gitattributes  .gitignore  README.md
FireEmblem-SacredStones-balanced-game-2.0/: .gitignore  1997 - Fire Emblem - The Sacred Stones (U)(TrashMan).SAV  ChangeList.md  tower-of-valni-suspended.sgm
FireEmblem7/HackedGame/: Fire Emblem 7 Hacked.sav
ROMS/: vbam.ini
ROMS/FE7/HackedGame/: .gitignore  ChangeList.md
ROMS/FE7/eliwood-mage/: README.md  fire-emblem-7-eliwood-mage.PATCH.ups  fire-emblem-7-eliwood-mage.PATCH.ups.7z  ups-base64-encoded.txt
ROMS/FE8/: .gitignore  ChangeList.md  Fire-Emblem-8-The-Sacred-Stones-ZxRebalanced-2.0-NA.7z  Fire-Emblem-8-The-Sacred-Stones-ZxRebalanced-2.0-NA.SAV  comment_.txt  fe8patch.7z  sav.7z
ROMS/FE8/saves/: Creature-Campaign.7z  FE8-Blank-With-Creature-Campaign.7z  FE8-Blank-With-Creature-Campaign.SAV  ch3-beginning.7z  ch3-beginning.sav  ch5-finished-training.7z  (+5 more)
sample/: .gitignore
scripts/: _FE8EssentialFixes.txt  sort_files.py
scripts/NUPS_CLI/: .astylerc  .gitignore  CMakeLists.txt  build_and_run.bat  build_and_run.cmd
scripts/NUPS_CLI/src/: CMakeLists.txt  byte_conversion.cpp  byte_conversion.hpp  crc32.cpp  crc32.hpp  main.cpp  nups_cli.cpp  nups_cli.hpp  ups.cpp  ups.hpp  vector_concat.cpp  vector_concat.hpp
scripts/base64-python/: base64_custom.py
scripts/base64_python/: base64_python.py  run.bat
scripts/nups-cli-cpp/: README.md  build_release.bat
scripts/nups-cli-rust/: .gitignore  Cargo.toml
scripts/sort-files/: config.json
scripts/sort_files/: config.json  random_icons.py  sort_files.py
(+45 files in other folders)
